# kinesis-reshard

./: README.md  kinesis-reshard.cabal  stack.yaml
src/: Main.hs
src/Reshard/: Cli.hs  Kinesis.hs  Operations.hs  Types.hs
test/: Check.hs  Spec.hs  Test.hs
