name:                kinesis-reshard
version:             0.1.0.0
synopsis:            Evenly reshard an aws kinesis stream
description:         Please see README.md
homepage:            https://github.com/geekingfrog/kinesis-reshard
license:             BSD3
license-file:        LICENSE
author:              Grégoire Charvet
maintainer:          greg@geekingfrog.com
copyright:           2017 Grégoire Charvet
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O1 -W -Wno-type-defaults -Wno-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates
  -- main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , text
                     , amazonka
                     , amazonka-core
                     , amazonka-kinesis
                     , lens
                     , unordered-containers
                     , transformers
                     , ini
                     , directory
                     , filepath
                     , exceptions
                     , resourcet
                     , mtl
                     , retry
                     , conduit
                     , conduit-combinators
  exposed-modules:     Reshard.Kinesis
                     , Reshard.Types
                     , Reshard.Operations
  other-modules:       Paths_kinesis_reshard

executable reshard
  -- hs-source-dirs:      src
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O1 -Wall -Wno-type-defaults -Wno-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:       base >= 4.7 && < 5
                     , text
                     , amazonka
                     , amazonka-core
                     , amazonka-kinesis
                     , lens
                     , unordered-containers
                     , ini
                     , transformers
                     , directory
                     , filepath
                     , exceptions
                     , resourcet
                     , mtl
                     , optparse-applicative
                     , retry
                     , conduit
                     , conduit-combinators
  main-is:             Main.hs
  other-modules:       Reshard.Kinesis
                     , Reshard.Types
                     , Reshard.Operations
                     , Reshard.Cli
                     , Paths_kinesis_reshard

test-suite test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options: -O0 -threaded -with-rtsopts=-N -Wall -Wno-orphans
  hs-source-dirs:     test
  main-is:            Test.hs
  build-depends:      base >= 4.7 && < 5
                    , QuickCheck
                    , hspec
                    , kinesis-reshard
  other-modules:      Check
                    , Spec
